# stackspot-agent-template

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
.files/9673c3b6-6453-4c73-b538-1fe7a87a175b/: 9ffea412-a33b-4063-8125-eee6c0e3ec75.csv
docs/: diagrams.md
examples/: basic_agent_usage.py  chat_with_existing_agent.py  chat_with_files.py
src/: main.py
src/agents/: base_agent.py  chat.py  stackspot_agent.py
src/config/: config_dynaconf.py  config_logger.py  settings.toml  stackspot_config.py
src/models/: chat_session.py  llm.py  prompt.py
src/stackspot_agent_api/: app.py
src/utils/: api_client.py  file_uploader.py  file_utils.py  url_utils.py
src/utils/data/: data_functions.py
src/utils/samples/datasets/: ks_lpu.py
tests/: test_stackspot_agent.py
web/: chainlit.md  chainlit_app.py
web/.chainlit/: config.json
