[project]
name = "stackspot-agent-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Emerson Rafael",email = "emersona7x@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.120.0,<0.121.0)"
]

[tool.poetry]
packages = [{include = "stackspot_agent_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=25.9.0,<26.0.0)"
]
